# playground-harness

./: .gitignore  .venv  Makefile  README.md  composer.json  docker-compose.yml  package-lock.json  package.json  phpunit.xml  pyproject.toml  tsconfig.json  vendor  vitest.config.ts
docs/: architecture.md  comparison.md  overview.md  principles.md
docs/adr/: 0001-mixin-trait-composition.md  0002-inline-yaml-events.md  0003-buffered-by-default-streaming.md  0004-last-field-convention.md  0005-standalone-message-bus.md  0006-per-run-event-control.md  0007-language-idiomatic-implementations.md  0008-python-lazy-init-pattern.md  0009-typescript-function-based-mixins.md  0010-php-generator-streaming.md  0011-custom-yaml-parser-php.md  0012-virtual-shell-architecture.md  0013-shell-registry-singleton.md  0014-pure-emulation-security-model.md  0015-lifecycle-hooks.md  0016-tool-registration.md  0017-skill-system-as-example-pattern.md  0018-middleware-pipeline.md  0019-shell-recursive-descent-parser.md  0020-shell-expansion-safety-limits.md  0021-custom-command-registration.md  0022-shell-and-registration-hooks.md  0023-has-commands-mixin.md  0024-has-skills-mixin.md  0025-fluent-builder-symmetric-apis.md  0026-shell-driver-contracts.md  0027-bashkit-driver-integration.md  0028-shell-redirect-pipeline-completeness.md  0029-openshell-driver-integration.md  0030-security-policy-objects.md  0031-go-struct-embedding-composition.md  README.md
docs/guides/: bashkit.md  events.md  go.md  hooks.md  middleware.md  openshell.md  php.md  (+7 more)
examples/: agent_harness.py  skills.py  skills.ts
(+312 files in other folders)
